--- a/index.html
+++ b/index.html
@@ -87,14 +87,18 @@
 
         .bg-gray-100 {
             /* Estilo para cada tarjeta de testimonio (asumiendo esta clase) */
-            flex: 0 0 50%;
-            /* Inicialmente, cada testimonio ocupa el 50% del ancho */
+            flex: 0 0 45%;
+            /* Reducir el ancho al 45% del contenedor */
             padding: 1rem;
             /* Añade un poco de espacio interno */
-            margin-right: 1rem;
-            /* Espacio entre testimonios */
+            margin-right: 1.5rem;
+            /* Aumentar un poco el espacio entre tarjetas */
             box-sizing: border-box;
             /* Incluye el padding y el border en el ancho y alto del elemento */
+            border: 1px solid #e2e8f0;
+            /* Añadir un borde sutil para definirlas mejor */
+            border-radius: 0.5rem;
+            /* Bordes un poco redondeados en las tarjetas */
         }
 
         .bg-gray-100:last-child {
@@ -111,6 +115,9 @@
                 /* Elimina el margen derecho */
                 margin-bottom: 1rem;
                 /* Añade un margen inferior entre testimonios */
+                border: none;
+                /* Opcional: quitar el borde en pantallas pequeñas */
+                border-radius: 0.25rem;
             }
         }
 
@@ -128,16 +135,23 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            background-color: rgba(98, 126, 255, 0.8);
-            /* Un poco de transparencia */
+            background-color: #627eff;
+            /* Color sólido, sin transparencia */
             color: white;
             border: none;
-            padding: 0.5rem 0.75rem;
-            border-radius: 50%;
+            padding: 0.75rem 1rem;
+            /* Aumentar un poco el tamaño del botón */
+            border-radius: 0.5rem;
+            /* Bordes un poco menos redondos */
             cursor: pointer;
             z-index: 20;
-            opacity: 0.8;
+            opacity: 0.9;
+            /* Un poco más opaco por defecto */
             transition: opacity 0.2s ease-in-out;
+            font-size: 1rem;
+            /* Tamaño de la fuente de los símbolos */
+            font-weight: bold;
+            /* Símbolos en negrita */
         }
 
         #prev-testimonial:hover,
@@ -146,11 +160,11 @@
         }
 
         #prev-testimonial {
-            left: 10px;
+            left: 20px;
         }
 
         #next-testimonial {
-            right: 10px;
+            right: 20px;
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
