--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
 
         #carousel-wrapper {
             display: flex;
-            /* Permite alinear los testimonios en fila */
             transition: transform 0.3s ease-in-out;
-            /* Añade una transición suave para el movimiento del carrusel */
+            justify-content: center;
+            /* Centra los elementos horizontalmente */
+            padding: 1rem 0;
+            /* Opcional: añade un poco de espacio vertical si lo necesitas */
         }
 
         .bg-gray-100 {
@@ -363,20 +365,22 @@
                 <div>
                     <img src="assets/sindy_team.png" alt="Psicóloga 1"
                         class="w-100 h-auto mx-auto mb-4 rounded-lg shadow-md">
-                    <h3 class="font-semibold">Sindy Lorena Nieto Castro</h3>
-                    <p class="text-sm text-gray-600">Psicóloga Clínica</p>
+                    <h3 class="font-semibold">Sindy Margarita Garrido</h3>
+                    <p class="text-sm text-gray-600">Psicóloga Especialista en Desarrollo Integral de la Infancia y
+                        Adolescencia</p>
                 </div>
                 <div>
                     <img src="assets/felipe_team.png" alt="Psicólogo 2"
                         class="w-100 h-auto mx-auto mb-4 rounded-lg shadow-md">
-                    <h3 class="font-semibold">Felipe Andrés Valencia</h3>
-                    <p class="text-sm text-gray-600">Psicólogo Educativo</p>
+                    <h3 class="font-semibold">Manuel Felipe Ascencio Tellez</h3>
+                    <p class="text-sm text-gray-600">Psicólogo con Enfoque Social y Gestión de Proyectos</p>
                 </div>
                 <div>
                     <img src="assets/viviana_team.png" alt="Psicóloga 3"
                         class="w-100 h-auto mx-auto mb-4 rounded-lg shadow-md">
-                    <h3 class="font-semibold">Viviana Marcela Moreno</h3>
-                    <p class="text-sm text-gray-600">Psicóloga Organizacional</p>
+                    <h3 class="font-semibold">Viviana Quiroga Corredor</h3>
+                    <p class="text-sm text-gray-600">Psicóloga en Atención a Víctimas de Violencia Sexual y Diplomado en
+                        Psicología Clínica</p>
                 </div>
             </div>
         </div>
