--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
             <nav id="menu" class="hidden md:flex space-x-4 text-sm font-semibold">
                 <a href="#inicio" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Inicio</a>
-                <a href="#sobre-nosotros"
+                <a href="#nosotros"
                     class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Sobre Nosotros</a>
                 <a href="#servicios"
                     class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Servicios</a>
