--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
             .bg-gray-100 {
                 flex: 0 0 100%;
                 /* Ocupar todo el ancho en móviles */
+                margin-right: 0;
+                /* Eliminar el margen derecho */
+                margin-bottom: 1.5rem;
+                /* Añadir un margen inferior para dar espacio entre comentarios */
+                padding: 1rem;
+                /* Asegurar que haya espacio interno */
+                border-radius: 0.25rem;
             }
         }
 
@@ -183,6 +190,13 @@
                 window.location.reload(true);
             });
         }
+        // Recargar la página al hacer clic en el enlace a Testimonios Completos
+        const testimoniosCompletosLink = document.querySelector('a[href="testimonios-completos.html"]');
+        if (testimoniosCompletosLink) {
+            testimoniosCompletosLink.addEventListener('click', (event) => {
+                window.location.reload(true); // Forzar la recarga desde el servidor
+            });
+        }
     </script>
 </head>
 
@@ -196,8 +210,8 @@
             </div>
             <nav id="menu" class="hidden md:flex space-x-4 text-sm font-semibold">
                 <a href="#inicio" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Inicio</a>
-                <a href="#nosotros"
-                    class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Sobre Nosotros</a>
+                <a href="#nosotros" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Sobre
+                    Nosotros</a>
                 <a href="#servicios"
                     class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Servicios</a>
                 <a href="#equipo" class="hover:bg-white/10 hover:rounded py-2 px-3 transition duration-300">Equipo</a>
