--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -71,7 +71,7 @@
             });
         }
          // Recargar la página al hacer clic en el enlace a Testimonios Completos
-         const testimoniosCompletosLink = document.querySelector('a[href="testimonios-completos.html"]');
+         const testimoniosCompletosLink = document.querySelector('a[href="/page/testimonios-completos.html"]');
         if (testimoniosCompletosLink) {
             testimoniosCompletosLink.addEventListener('click', (event) => {
                 window.location.reload(true); // Forzar la recarga desde el servidor
