--- a/index.html
+++ b/index.html
@@ -130,10 +130,15 @@
                 margin-right: 0;
                 /* Eliminar el margen derecho */
                 margin-bottom: 1.5rem;
-                /* Añadir un margen inferior para dar espacio entre comentarios */
+                /* Añadir margen inferior para dar espacio entre comentarios */
                 padding: 1rem;
                 /* Asegurar que haya espacio interno */
                 border-radius: 0.25rem;
+            }
+
+            #carousel-wrapper {
+                width: 100%;
+                /* Asegurar que el contenedor del carrusel ocupe todo el ancho */
             }
         }
 
@@ -435,6 +440,7 @@
         let currentIndex = 0;
         const itemsPerPage = 4; // Dos filas de 2
 
+
         function showTestimonials(index) {
             testimoniosContainer.innerHTML = '';
             const startIndex = index * itemsPerPage;
@@ -523,6 +529,9 @@
         }
 
         document.addEventListener('DOMContentLoaded', function () {
+            if (window.innerWidth <= 480) {
+                itemsPerPage = 1; // Mostrar solo un item por página en móviles
+            }
             fetch(googleSheetURL)
                 .then(response => response.text())
                 .then(csvData => {
