--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
             });
         }
     </script>
+    <!-- adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5397310873335886"
+        crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-white text-gray-800">
@@ -528,7 +531,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', function () {
-            
+
             fetch(googleSheetURL)
                 .then(response => response.text())
                 .then(csvData => {
