--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             class="absolute w-full h-full backface-hidden bg-white rounded-xl p-6 flex flex-col justify-center items-center text-center border border-gray-200 pulse">
                             <img src="assets/img/inicio_tarjeta.jfif" alt="Imagen Instituciones"
                                 class="max-h-48 object-contain mb-4">
-                            <h3 class="text-xl font-semibold mb-2">Instituciones Educativas</h3>
+                            <h3 class="text-xl font-semibold mb-2">Orientación Vocacional</h3>
                         </div>
                         <div
                             class="absolute w-full h-full backface-hidden rotate-y-180 bg-[#53c6e4] shadow-xl rounded-xl p-6 overflow-y-auto text-center text-white">
