--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -78,7 +78,6 @@
             });
         }
     </script>
-    <!-- adsense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5397310873335886"
         crossorigin="anonymous"></script>
 </head>
@@ -141,51 +140,7 @@
                     bienestar y energía, previniendo el síndrome de Burnout.
                 </p>
             </div>
-            <div class="splide my-16" id="carousel-empresarial-1">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen 1"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen 2"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen 4"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen 3"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen 1"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen 2"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen 4"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen 3"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                    </ul>
-                </div>
-            </div>
 
-            <div class="splide my-16" id="carousel-empresarial-2">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen 1"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen 2"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen 4"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen 3"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen 1"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen 2"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen 4"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen 3"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                    </ul>
-                </div>
-            </div>
             <div class="bg-white shadow-xl rounded-2xl p-6 transform transition duration-500 hover:scale-105">
                 <h3 class="text-xl font-semibold text-[#627eff] mb-2">2. Terapias</h3>
                 <p>
@@ -204,52 +159,8 @@
                     <br /><span class="italic text-sm text-gray-600">*Aplica condiciones</span>
                 </p>
             </div>
-            <div class="splide my-16" id="carousel-empresarial-3">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen 1"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen 2"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen 4"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen 3"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen 1"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen 2"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen 4"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen 3"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                    </ul>
-                </div>
-            </div>
 
-            <div class="splide my-16" id="carousel-empresarial-4">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_5.jpeg" alt="Imagen 5"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_6.jpeg" alt="Imagen 6"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_7.jpeg" alt="Imagen 7"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_8.jpeg" alt="Imagen 8"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_5.jpeg" alt="Imagen 5"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_6.jpeg" alt="Imagen 6"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_7.jpeg" alt="Imagen 7"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                        <li class="splide__slide"><img src="assets/img_empresarial/empresarial_8.jpeg" alt="Imagen 8"
-                                class="w-full h-40 object-cover rounded-xl"></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="bg-white shadow-xl rounded-2xl p-6 transform transition duration-500 hover:scale-105">
+             <div class="bg-white shadow-xl rounded-2xl p-6 transform transition duration-500 hover:scale-105">
                 <h3 class="text-xl font-semibold text-[#627eff] mb-2">4. Orientación Vocacional</h3>
                 <p>
                     Servicio de orientación vocacional dirigido a estudiantes de grado noveno a once.
@@ -259,6 +170,20 @@
             </div>
         </div>
 
+        <div class="splide my-16" id="general-empresarial-carousel">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen Empresarial 1" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen Empresarial 2" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen Empresarial 3" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen Empresarial 4" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_5.jpeg" alt="Imagen Empresarial 5" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_6.jpeg" alt="Imagen Empresarial 6" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_7.jpeg" alt="Imagen Empresarial 7" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_8.jpeg" alt="Imagen Empresarial 8" class="w-full h-64 object-cover rounded-xl"></li>
+                </ul>
+            </div>
+        </div>
         <div class="text-center mt-10">
             <a href="index.html"
                 class="inline-block bg-[#627eff] text-white py-2 px-6 rounded-lg shadow hover:bg-[#53c6e4] transition">
@@ -392,47 +317,23 @@
     </script>
 
     <script>
-        new Splide('#carousel-empresarial-1', {
-            type: 'loop',
-            autoplay: true,
-            interval: 3000,
-            pauseOnHover: true,
-            perPage: 1,
+         // Inicializar el único carrusel general de imágenes
+        new Splide('#general-empresarial-carousel', {
+            type: 'loop', // Carrusel continuo
+            autoplay: true, // Reproducción automática
+            interval: 3000, // Cambiar de diapositiva cada 3 segundos
+            pauseOnHover: true, // Pausar al pasar el ratón
+            perPage: 3, // Mostrar 3 imágenes a la vez en escritorio
+            gap: '1rem', // Espacio entre imágenes
             breakpoints: {
-                768: { height: '200px' }
-            }
-        }).mount();
-
-        new Splide('#carousel-empresarial-2', {
-            type: 'loop',
-            autoplay: true,
-            interval: 3000,
-            pauseOnHover: true,
-            perPage: 1,
-            breakpoints: {
-                768: { height: '200px' }
-            }
-        }).mount();
-
-        new Splide('#carousel-empresarial-3', {
-            type: 'loop',
-            autoplay: true,
-            interval: 3000,
-            pauseOnHover: true,
-            perPage: 1,
-            breakpoints: {
-                768: { height: '200px' }
-            }
-        }).mount();
-
-        new Splide('#carousel-empresarial-4', {
-            type: 'loop',
-            autoplay: true,
-            interval: 3000,
-            pauseOnHover: true,
-            perPage: 1,
-            breakpoints: {
-                768: { height: '200px' }
+                768: { // Ajustes para tablets (hasta 768px)
+                    perPage: 2, // Mostrar 2 imágenes
+                    gap: '0.75rem', // Espacio un poco menor
+                },
+                480: { // Ajustes para móviles (hasta 480px)
+                    perPage: 1, // Mostrar 1 imagen
+                    gap: '0.5rem', // Espacio aún menor
+                },
             }
         }).mount();
     </script>
