--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -160,7 +160,7 @@
                 </p>
             </div>
 
-             <div class="bg-white shadow-xl rounded-2xl p-6 transform transition duration-500 hover:scale-105">
+            <div class="bg-white shadow-xl rounded-2xl p-6 transform transition duration-500 hover:scale-105">
                 <h3 class="text-xl font-semibold text-[#627eff] mb-2">4. Orientación Vocacional</h3>
                 <p>
                     Servicio de orientación vocacional dirigido a estudiantes de grado noveno a once.
@@ -173,14 +173,22 @@
         <div class="splide my-16" id="general-empresarial-carousel">
             <div class="splide__track">
                 <ul class="splide__list">
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen Empresarial 1" class="w-full h-64 object-cover rounded-xl"></li>
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg" alt="Imagen Empresarial 2" class="w-full h-64 object-cover rounded-xl"></li>
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg" alt="Imagen Empresarial 3" class="w-full h-64 object-cover rounded-xl"></li>
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg" alt="Imagen Empresarial 4" class="w-full h-64 object-cover rounded-xl"></li>
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_5.jpeg" alt="Imagen Empresarial 5" class="w-full h-64 object-cover rounded-xl"></li>
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_6.jpeg" alt="Imagen Empresarial 6" class="w-full h-64 object-cover rounded-xl"></li>
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_7.jpeg" alt="Imagen Empresarial 7" class="w-full h-64 object-cover rounded-xl"></li>
-                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_8.jpeg" alt="Imagen Empresarial 8" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_1.jpeg"
+                            alt="Imagen Empresarial 1" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_2.jpeg"
+                            alt="Imagen Empresarial 2" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_3.jpeg"
+                            alt="Imagen Empresarial 3" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_4.jpeg"
+                            alt="Imagen Empresarial 4" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_5.jpeg"
+                            alt="Imagen Empresarial 5" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_6.jpeg"
+                            alt="Imagen Empresarial 6" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_7.jpeg"
+                            alt="Imagen Empresarial 7" class="w-full h-64 object-cover rounded-xl"></li>
+                    <li class="splide__slide"><img src="assets/img_empresarial/empresarial_8.jpeg"
+                            alt="Imagen Empresarial 8" class="w-full h-64 object-cover rounded-xl"></li>
                 </ul>
             </div>
         </div>
@@ -317,7 +325,7 @@
     </script>
 
     <script>
-         // Inicializar el único carrusel general de imágenes
+        // Inicializar el único carrusel general de imágenes
         new Splide('#general-empresarial-carousel', {
             type: 'loop', // Carrusel continuo
             autoplay: true, // Reproducción automática
