--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         id="card3">
                         <div
                             class="absolute w-full h-full backface-hidden bg-white rounded-xl p-6 flex flex-col justify-center items-center text-center border border-gray-200 pulse">
-                            <img src="assets/img/inicio_tarjeta.jfif" alt="Imagen Talleres"
+                            <img src="assets/img_empresarial/empresarial_1.jpeg" alt="Imagen Talleres"
                                 class="max-h-48 object-contain mb-4">
                             <h3 class="text-xl font-semibold mb-2">Talleres & Charlas</h3>
                         </div>
