--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         id="card2">
                         <div
                             class="absolute w-full h-full backface-hidden bg-white rounded-xl p-6 flex flex-col justify-center items-center text-center border border-gray-200 pulse">
-                            <img src="assets/img/orientacion_V.jpeg" alt="Imagen Instituciones"
+                            <img src="assets/img/inicio_3.jpeg" alt="Imagen Instituciones"
                                 class="max-h-48 object-contain mb-4">
                             <h3 class="text-xl font-semibold mb-2">Orientación Vocacional</h3>
                         </div>
