--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('ruta/a/tu/imagen-de-fondo.jpg');
+            background-image: url('assets/img_empresarial/background-empresarial.jpeg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
