--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -213,7 +213,7 @@
     </section>
 
 
-    <div class="mt-20 max-w-2xl mx-auto shadow-lg rounded-xl p-6 scroll-mt-20" id="contacto">
+    <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6 scroll-mt-20" id="contacto">
         <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
 
         <div id="successMessage"
